# AccountManager

./: .gitignore  CLAUDE.md  GEMINI.md  Idea Backlog & Notes.md  Launch App.bat  TODO-NOTES.txt  backup_lol.py  backup_sync_engine.py  code_review.md  main.py  pyproject.toml  riot.txt
alembic/: env.py
alembic/versions/: 4e3ba1b85a1f_baseline_with_timestamps_constraints_.py  a8f3c2d1e5b4_structured_match_data_in_game_gm_flag.py  b9c4d3e2f6a5_sc2_match_table_and_live_tracking.py
api_tests/: lol_api_test.py  sc2_api_test.py
api_tests/output_lol/: 1_account_v1.json  2_summoner_v4.json  3_league_v4.json  4_match_ids.json  5_match_details.json  6_match_timeline.json  7_champion_masteries.json
api_tests/output_sc2/: 1_current_season.json  2_profile_metadata.json  3_profile_base.json  4_ladder_summary.json
docs/: Sc2reader Deep Dive Documentation.md  StarCraft II Local App Data Integration.md  Zephyrus Parser Technical Analysis.md  improvement_plan.md  riot_api_reference.md  sc2_api_reference.md
scripts/: api_tester.py  match_explorer.py
scripts/tools/: sc2_smart_linker.py
src/: api_clients.py  config.py  data_updater.py  db_manager.py  health.py  live_tracker.py  sc2_live.py  schemas.py  static_data.py  sync_engine.py
src/data/: crud.py  database.py  models.py
src/lol/: api_client.py  live.py  sync.py
src/sc2/: api_client.py  live.py  sync.py
src/services/: data_service.py
src/ui/: ui_lol.py  ui_sc2.py  ui_utils.py
